fix(ui): fix text color in commit history page for dark mode (#2633)
Ref: SRX-520HDP

--- a/services/frontend-service/src/ui/Pages/CommitInfo/CommitInfoPage.scss
+++ b/services/frontend-service/src/ui/Pages/CommitInfo/CommitInfoPage.scss
@@ -26,4 +26,5 @@ Copyright freiheit.com*/
     .commit-page-message span {
         margin-left: 10px;
     }
+    color: var(--mdc-theme-on-background-dark);
 }
